fix nesting readability alt link

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a, a:link, a:visited, a:hover { text-decoration: none; }
 
 img { height: auto; vertical-align: top; }
 
-.container { max-width: 1200px; margin: 0 auto; background-color: #d4f0e7; padding: 24px 0px; }
+.header { max-width: 1200px; margin: 0 auto; background-color: #d4f0e7; padding: 24px 0px; }
 
 .header__nav { display: flex; justify-content: flex-end; align-items: center; }
 .header__nav .nav__items { display: flex; align-items: center; }
@@ -27,7 +27,7 @@ img { height: auto; vertical-align: top; }
 
 .checkbox__more:checked ~ .popup__more-items { display: flex; justify-content: center; }
 
-.checkbox__more:focus ~ label .popup__more-name { background-color: #dae6e2; }
+.checkbox__more:checked ~ label .popup__more-name { background-color: #dae6e2; display: none; }
 
 .popup__button { cursor: pointer; }
 
@@ -47,10 +47,10 @@ img { height: auto; vertical-align: top; }
 
 .popup__content::-webkit-scrollbar-track { margin: 4px; }
 
-.icon { max-height: 36px; }
+.icon { max-height: 36px; margin-bottom: 4px; margin-top: 8px; }
 
 .popup__more-items { display: none; flex-wrap: wrap; margin-top: 12px; }
-.popup__more-items .popup__more-item .popup__more-icon { display: inline-block; width: 80px; height: 100%; text-align: center; cursor: pointer; border: 1px solid transparent; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; margin-bottom: 8px; padding: 4px 0; }
+.popup__more-items .popup__more-item .popup__more-icon { padding-top: 4px; display: inline-block; width: 80px; height: 100%; text-align: center; cursor: pointer; border: 1px solid transparent; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; margin-bottom: 8px; padding: 4px 0; }
 .popup__more-items .popup__more-item .popup__more-icon .popup__more-name:hover { text-decoration: underline; }
 .popup__more-items .popup__more-item .popup__more-icon:hover { background-color: #d1cbcb; }
 .popup__more-items .popup__more-item .popup__more-icon:focus { background-color: #aaa5a5; outline: none; }
@@ -68,7 +68,7 @@ img { height: auto; vertical-align: top; }
 .user-item .user { background-color: #b4ebe2; color: #383531; }
 .user-item .user .user__img { width: 24px; }
 
-.popup__more-name { display: block; color: #1b1818; font-size: 14px; padding: 4px; cursor: pointer; width: 80%; margin: 0 auto; color: #1f1a1a; align-items: center; }
+.popup__more-name { display: flex; color: #1b1818; font-size: 14px; padding: 18px 8px 8px 8px; cursor: pointer; width: 80%; margin: 0 auto; color: #1f1a1a; align-items: center; justify-content: center; }
 
 .even-more { display: inline; padding-bottom: 8px; }
 
